# coaly

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md
doc/: coaly.toml
examples/: coaly_demo.rs  coaly_demo.toml
src/: collections.rs  datetime.rs  event.rs  lib.rs  modechange.rs  observer.rs  policies.rs  util.rs  variables.rs
src/agent/: mod.rs  threadstatus.rs  worker.rs
src/config/: datetimeformat.rs  mod.rs  output.rs  resource.rs  systemproperties.rs
src/config/toml/: document.rs  mod.rs  parser.rs
src/config/toml/scanner/: basicstates.rs  datetimestates.rs  mod.rs  numberstates.rs  stringstates.rs
src/errorhandling/: messages_de.txt  messages_en.txt  mod.rs
src/net/: buffer.rs  clientconnection.rs  clientwhitelist.rs  mod.rs  serializable.rs  server.rs  serverproperties.rs  tcp.rs  udp.rs
src/output/: formatspec.rs  inventory.rs  mod.rs  outputformat.rs  recordbuffer.rs  recordformat.rs  serverinventory.rs  standaloneinventory.rs
src/output/resource/: file.rs  mod.rs  network.rs  rollover.rs  syslog.rs
src/record/: mod.rs  originator.rs  recorddata.rs
systemtest/: testapp.rs  testrollover.rs
systemtest/chamaeleon/: app.rs  config.rs  mod.rs
testdata/it/: coalyserver.toml
testdata/st/coalycfg/: r-1file_f-allvars_m-err2full.toml  r-1file_f-allvars_m-none.toml  r-nfiles_f-allvars_m-none.toml
testdata/st/testcfg/: st-0001.toml  st-0002.toml  st-0101.toml  st-0103.toml
testdata/ut/: coalytest.toml
testdata/ut/config/footprint/success/: ns001_default.txt  ns609_res_network_min.txt  ns610_res_network_max.txt  ns611_res_syslog_min.txt  ns612_res_syslog_max.txt  ns801_server_listen_addr_tcp4.txt  s001_default.txt  s002_empty.txt  s101_system_custom.txt  s102_system_modes_empty.txt  s103_system_modes_emergency.txt  s104_system_modes_alert.txt  s105_system_modes_critical.txt  s106_system_modes_error.txt  s107_system_modes_warn.txt  s108_system_modes_notice.txt  s109_system_modes_info.txt  s110_system_modes_debug.txt  s111_system_modes_func.txt  s112_system_modes_mod.txt  s113_system_modes_obj.txt  s114_system_modes_logs.txt  s115_system_modes_problems.txt  s116_system_modes_traces.txt  s117_system_modes_units.txt  s119_system_modes_any.txt  s120_system_modes_logs_debug.txt  s121_system_modes_overlapping.txt  s122_system_modes_str.txt  s201_fmts_dt_empty_group.txt  s202_fmts_dt_empty_format.txt  s203_fmts_dt_ts_only.txt  s204_fmts_dt_date_only.txt  s205_fmts_dt_time_only.txt  s301_fmts_outp_empty_group.txt  s302_fmts_outp_empty_items.txt  s303_fmts_outp_lvls_trgs_str.txt  s401_buffp_empty_group.txt  s402_buffp_size_without_suffix.txt  s403_buffp_size_kb_lower.txt  (+48 more)
testdata/ut/config/input/fail/: cf503_rovrp_compr_gzip.toml  f001_unknown_root_group.toml  f101_system_not_table.toml  f102_system_unknown_keys.toml  f103_system_inv_types.toml  f104_stsize_too_small.toml  f105_stsize_too_large.toml  f106_dup_level_id.toml  f107_dup_level_name.toml  f108_ind_dup_level_id.toml  f109_ind_dup_level_name.toml  f110_empty_level_id.toml  f111_empty_level_name.toml  f112_level_id_not_char.toml  f113_level_id_not_str.toml  f114_level_name_not_str.toml  f115_system_modes_empty_str.toml  f116_system_modes_dup_level.toml  f117_fallback_path_rel.toml  f118_fallback_path_nonexistent.toml  f119_fallback_path_not_writable.toml  f120_fallback_path_undefined_enva.toml  f201_fmts_dt_inv_time_spec.toml  (+139 more)
testdata/ut/toml_scanner/: toml_basic_string_tests.txt  toml_datetime_value_tests.txt  toml_key_tests.txt  toml_literal_string_tests.txt  toml_math_value_tests.txt  toml_ml_basic_string_tests.txt  toml_ml_literal_string_tests.txt
(+461 files in other folders)
